# rivercrossing

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/network/: cnn_filter.h  network.h  neuron.h
include/rivercrossing/: animat.h  decisionnetwork.h  dsworld.h  movement_network.h  rivercrossing.h  shuntingmodel.h
include/rivercrossing/decision_network/: RGB_DN.h  base_DN.h  object_DN.h
include/rivercrossing/shunting_network/: CNN_SM.h  base_SM.h  static_SM.h
include/tools/: config.h  defines.h  random.h  threadpool.h
requirements/: cmake.patch  install_requirements.sh
scripts/: RobustnessTest.sge  _configvars.sh  continuousRiverCrossing.sge  format_output.py
scripts/r/: boxplots.r  scatterplot.R
src/: main.cpp
src/network/: cnn_filter.cpp  network.cpp  neuron.cpp
src/rivercrossing/: animat.cpp  decisionnetwork.cpp  dsworld.cpp  movement_network.cpp  rivercrossing.cpp  shuntingmodel.cpp
src/rivercrossing/decision_network/: RGB_DN.cpp  base_DN.cpp  object_DN.cpp
src/rivercrossing/shunting_network/: CNN_SM.cpp  base_SM.cpp  static_SM.cpp
src/tools/: config.cpp  random.cpp  threadpool.cpp
